# iso-assignment

./: Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt
config/: redis.conf
src/api/: core.py  ini_load.py  main.py  redishandler.py  test_api.py
src/api/models/: models.py
src/ui/: pyscript.html
