[tool.poetry]
name = "iso-assignment"
version = "0.1.0"
description = "An assignment given by kiwi.com"
authors = ["4d4mk0 <mikulasek.adam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pycountry = "^22.3.5"
country-list = "^1.0.0"
redis = "^4.3.4"
requests = "^2.28.1"
fastapi = "^0.78.0"
pytest = "^7.1.2"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
